# speedy-stt

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SETUP.md  build.ps1  clippy.ps1  deny.toml
.claude/: settings.local.json
assets/models/: .gitkeep
assets/plans/: AUDIO_DUCKING_PLAN.md  LAZY_LOADING_PLAN.md  README.md
assets/scripts/: download-model.ps1  lower-pitch.ps1
src/: app.rs  audio.rs  config.rs  feedback.rs  hotkey.rs  input.rs  main.rs  tray.rs  volume.rs  whisper.rs
